--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -19,7 +19,7 @@
   },
 
   "background": {
-    "scripts": [ "scripts/background.js", "scripts/teamCityClient.js" ],
+    "scripts": [ "scripts/background.js", "scripts/tfsClient.js", "scripts/teamCityClient.js" ],
     "persistent": false
   },
 
