--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
 
   "name": "TeamCity build checker for TFS pull requests",
-  "description": "This extension shows a status of a corresponding TeamCity build on the TFS pull request pages",
+  "description": "This extension shows a status of a corresponding TeamCity build on the TFS pull request pages. Tested with TFS 2017 and TeamCity 10.x",
   "version": "1.0",
 
   "permissions": [
@@ -19,14 +19,15 @@
   },
 
   "background": {
-    "scripts": [ "scripts/background.js", "scripts/tfsClient.js", "scripts/teamCityClient.js" ],
+    "scripts": [ "scripts/background/ruleManager.js", "scripts/background/tfsClient.js", "scripts/background/teamCityClient.js" ],
     "persistent": false
   },
 
   "content_scripts": [{
     "matches": [ "<all_urls>" ],
+    "run_at": "document_end",
     "css": [ "styles/injection.css" ],
-    "js": [ "external/jquery-3.2.1.min.js", "scripts/tfsPageAdapter.js", "scripts/injector.js" ]
+    "js": [ "external/jquery-3.2.1.min.js", "scripts/content/tfsPageAdapter.js", "scripts/content/injector.js" ]
   }],
 
   "web_accessible_resources": [
@@ -39,7 +40,6 @@
       "24": "images/icon24.png",
       "32": "images/icon32.png"
     },
-    "default_title": "TeamCity build status",
     "default_popup": "popup.html"
   }
 }
